# Pixla

./: .gitignore  ARCHITECTURE.md  README.md  TODO.md  opencode.json
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py
backend/app/db/: __init__.py
backend/app/routes/: __init__.py  generations.py  models.py  palettes.py
backend/app/services/: __init__.py  agent.py  autotile.py  canvas.py  constants.py  diffusion.py  model_discovery.py  quantization.py
backend/app/utils/: __init__.py  logging.py
backend/tests/: test_agent.py  test_autotile.py  test_canvas.py  test_db.py  test_diffusion.py  test_model_discovery.py  test_quantization.py  test_routes.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  theme.css
frontend/src/__tests__/: Canvas.test.tsx  palettes.test.ts
frontend/src/components/: Canvas.tsx  ControlPanel.tsx  Layout.tsx
frontend/src/pages/: History.tsx  Home.tsx  Palettes.tsx
frontend/src/store/: generations.ts  models.ts  palettes.ts  status.ts  theme.ts
